--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+* {
+  font-family: "Lato", sans-serif;
+}
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   padding: 20px;
   margin: 20px;
 }
@@ -16,7 +20,4 @@ body {
 .buts-align {
   display: flex;
   justify-content: space-around;
-}
-body table tr:nth-child(even) {
-  background-color: lightgray;
 }
